[gd_scene load_steps=54 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/player/WeaponManager.gd" type="Script" id=4]
[ext_resource path="res://weapons/frames/shotgun/attack/1st barrel/first_barrel_sheet.png" type="Texture" id=5]
[ext_resource path="res://weapons/raw_assets/machinegun.glb" type="PackedScene" id=6]
[ext_resource path="res://weapons/raw_assets/shotgun.glb" type="PackedScene" id=7]
[ext_resource path="res://weapons/frames/pistol/reloading/reload_sheet.png" type="Texture" id=8]
[ext_resource path="res://weapons/HitScanBulletEmitter.tscn" type="PackedScene" id=9]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=10]
[ext_resource path="res://effects/MuzzleFlash.gd" type="Script" id=11]
[ext_resource path="res://effects/raw_assets/muzzleflash1.glb" type="PackedScene" id=12]
[ext_resource path="res://effects/raw_assets/muzzleflash3.glb" type="PackedScene" id=13]
[ext_resource path="res://weapons/frames/pistol/empty/empty_sheet.png" type="Texture" id=14]
[ext_resource path="res://weapons/frames/shotgun/empty/empty_sheet.png" type="Texture" id=15]
[ext_resource path="res://weapons/frames/shotgun/reload/reloading_sheet.png" type="Texture" id=16]
[ext_resource path="res://weapons/crosshairs/crosshair065.png" type="Texture" id=17]
[ext_resource path="res://weapons/crosshairs/crosshair066.png" type="Texture" id=18]
[ext_resource path="res://characters/player/PickupManager.gd" type="Script" id=19]
[ext_resource path="res://ui/Stats.gd" type="Script" id=20]
[ext_resource path="res://weapons/frames/pistol/reloading/gun sprite_reload_04.png" type="Texture" id=21]
[ext_resource path="res://weapons/frames/pistol/reloading/gun sprite_reload_06.png" type="Texture" id=22]
[ext_resource path="res://weapons/frames/pistol/empty/gun sprite_empty_01.png" type="Texture" id=23]
[ext_resource path="res://weapons/frames/pistol/shooting/shooting_04.png" type="Texture" id=24]
[ext_resource path="res://weapons/frames/pistol/shooting/shooting_03.png" type="Texture" id=25]
[ext_resource path="res://weapons/frames/pistol/empty/gun sprite_empty_03.png" type="Texture" id=26]
[ext_resource path="res://weapons/frames/pistol/reloading/gun sprite_reload_01.png" type="Texture" id=27]
[ext_resource path="res://weapons/frames/pistol/reloading/gun sprite_reload_05.png" type="Texture" id=28]
[ext_resource path="res://weapons/frames/pistol/shooting/shooting_05.png" type="Texture" id=29]
[ext_resource path="res://weapons/frames/pistol/shooting/shooting_01.png" type="Texture" id=30]
[ext_resource path="res://weapons/frames/pistol/shooting/shooting_02.png" type="Texture" id=31]
[ext_resource path="res://weapons/frames/pistol/empty/gun sprite_empty_02.png" type="Texture" id=32]
[ext_resource path="res://weapons/frames/pistol/reloading/gun sprite_reload_02.png" type="Texture" id=33]
[ext_resource path="res://weapons/frames/pistol/reloading/gun sprite_reload_03.png" type="Texture" id=34]
[ext_resource path="res://weapons/frames/shotgun/attack/2nd barrel/2nd barrel_01.png" type="Texture" id=40]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="StreamTexture" id=19]
flags = 2
load_path = "res://.import/shooting_sheet.png-3692df4a8b7b8f0bd01c4069fe9331dd.stex"

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Empty:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Empty:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Reloading:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=23]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
resource_name = "empty"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Empty:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Empty:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Reloading:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Empty:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=26]
resource_name = "reload"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Reloading:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Reloading:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [  ],
"loop": true,
"name": "alt_attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 29 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 32 ), ExtResource( 26 ) ],
"loop": false,
"name": "empty",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 21 ), ExtResource( 28 ), ExtResource( 22 ) ],
"loop": false,
"name": "reload",
"speed": 12.0
} ]

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Empty:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Reloading:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Idle:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Attack:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Idle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Empty:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Reloading:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=28]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=29]
resource_name = "empty"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Empty:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Empty:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=30]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Empty:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Reloading:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Attack:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=31]
resource_name = "reload"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Reloading:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Reloading:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapons:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "moving"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapons:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.03, 0, 0 ) ]
}

[sub_resource type="SphereShape" id=12]
radius = 15.0

[sub_resource type="SphereShape" id=13]
radius = 50.0

[sub_resource type="CapsuleShape" id=32]
radius = 0.8

[node name="Player" type="KinematicBody" groups=["player"]]
collision_layer = 6
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
current = true

[node name="WeaponManager" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.96046e-08, -0.15642, -0.31398 )
script = ExtResource( 4 )

[node name="Weapons" type="Spatial" parent="Camera/WeaponManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0277758, 0, 0 )

[node name="Pistol" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.135936, 0.0357596, 0.111642 )
script = ExtResource( 10 )
attack_rate = 0.3

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Pistol"]

[node name="machinegun" parent="Camera/WeaponManager/Weapons/Pistol/Graphics" instance=ExtResource( 6 )]
transform = Transform( 0.149456, 0, 0, 0, 0.149456, 0, 0, 0, 0.149456, 0, 0, 0 )
visible = false

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/Pistol/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.051043, -0.256063 )
script = ExtResource( 11 )

[node name="muzzleflash1" parent="Camera/WeaponManager/Weapons/Pistol/Graphics/MuzzleFlash" instance=ExtResource( 12 )]
transform = Transform( -0.238451, 0, -3.60051e-08, 0, 0.238451, 0, 3.60051e-08, 0, -0.238451, 0, 0, 0 )
visible = false

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/Pistol/Graphics/MuzzleFlash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00900432 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Pistol"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0485455, -0.26182 )

[node name="HitScanBulletEmitter" parent="Camera/WeaponManager/Weapons/Pistol/BulletEmitters" instance=ExtResource( 9 )]

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/Pistol"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 17 )

[node name="Animations" type="Spatial" parent="Camera/WeaponManager/Weapons/Pistol"]

[node name="Attack" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Pistol/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
visible = false
billboard = 1
texture = SubResource( 19 )
hframes = 2
vframes = 3

[node name="Reloading" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Pistol/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
billboard = 1
texture = ExtResource( 8 )
hframes = 2
vframes = 3
frame = 1

[node name="Empty" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Pistol/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
billboard = 1
texture = ExtResource( 14 )
hframes = 2
vframes = 2

[node name="Idle" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Pistol/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
visible = false
billboard = 1
texture = SubResource( 19 )
hframes = 2
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/Pistol/Animations"]
anims/RESET = SubResource( 22 )
anims/attack = SubResource( 23 )
anims/empty = SubResource( 24 )
anims/idle = SubResource( 25 )
anims/reload = SubResource( 26 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Camera/WeaponManager/Weapons/Pistol"]
transform = Transform( 0.366105, 0, 0, 0, 0.366105, 0, 0, 0, 0.366105, 0.0197597, 0, -0.651279 )
visible = false
frames = SubResource( 33 )
animation = "idle"

[node name="Shotgun" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.130691, 0.0411246, 0.139673 )
visible = false
script = ExtResource( 10 )
damage = 10
attack_rate = 0.5

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.154344 )

[node name="shotgun" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics" instance=ExtResource( 7 )]
transform = Transform( 0.137906, 0, 0, 0, 0.137906, 0, 0, 0, 0.137906, 0, -0.000802144, 0.0218236 )
visible = false

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0176045, 0.049455, -0.899171 )
visible = false
script = ExtResource( 11 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash"]

[node name="muzzleflash3" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash" instance=ExtResource( 13 )]
transform = Transform( -0.13922, 0, -4.53637e-08, 0, 0.13922, 0, 4.53637e-08, 0, -0.13922, 0, 0, 0 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.019293, -0.246466 )

[node name="HitScanBulletEmitter" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]

[node name="HitScanBulletEmitter2" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.999048, 0, -0.0436194, 0, 1, 0, 0.0436194, 0, 0.999048, 0, 0, 0 )

[node name="HitScanBulletEmitter3" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.999048, 0, 0.0436194, 0, 1, 0, -0.0436194, 0, 0.999048, 0, 0, 0 )

[node name="HitScanBulletEmitter4" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.996195, 0, -0.0871557, 0, 1, 0, 0.0871557, 0, 0.996195, 0, 0, 0 )

[node name="HitScanBulletEmitter5" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.996195, 0, 0.0871557, 0, 1, 0, -0.0871557, 0, 0.996195, 0, 0, 0 )

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 18 )

[node name="Animations" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]

[node name="Attack" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Shotgun/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
billboard = 1
texture = ExtResource( 5 )
hframes = 2
vframes = 3

[node name="Reloading" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Shotgun/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
billboard = 1
texture = ExtResource( 16 )
hframes = 3
vframes = 4

[node name="Empty" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Shotgun/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
billboard = 1
texture = ExtResource( 15 )
vframes = 2

[node name="Idle" type="Sprite3D" parent="Camera/WeaponManager/Weapons/Shotgun/Animations"]
transform = Transform( 0.32, 0, 0, 0, 0.32, 0, 0, 0, 0.32, 0.0670378, -0.107411, -0.672383 )
visible = false
billboard = 1
texture = ExtResource( 40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/Shotgun/Animations"]
anims/RESET = SubResource( 27 )
anims/attack = SubResource( 28 )
anims/empty = SubResource( 29 )
anims/idle = SubResource( 30 )
anims/reload = SubResource( 31 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Camera/WeaponManager/Weapons/Shotgun"]
transform = Transform( 0.366105, 0, 0, 0, 0.366105, 0, 0, 0, 0.366105, 0.0197597, 0, -0.516056 )
visible = false
frames = SubResource( 33 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager"]
autoplay = "idle"
anims/idle = SubResource( 10 )
anims/moving = SubResource( 11 )

[node name="AlertAreaHearing" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaHearing"]
shape = SubResource( 12 )

[node name="AlertAreaLos" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaLos"]
shape = SubResource( 13 )

[node name="FirePoint" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.111322 )

[node name="CharacterMover" parent="." instance=ExtResource( 2 )]

[node name="HealthManager" parent="." instance=ExtResource( 3 )]

[node name="PickupManager" type="Area" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource( 19 )

[node name="CollisionShape" type="CollisionShape" parent="PickupManager"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 32 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Stats" type="Label" parent="CanvasLayer"]
margin_left = 20.0
margin_top = 17.0
margin_right = 85.0
margin_bottom = 53.0
rect_scale = Vector2( 2.66422, 2.37684 )
text = "Heath: 0
Ammo: 0"
script = ExtResource( 20 )

[connection signal="ammo_changed" from="Camera/WeaponManager" to="CanvasLayer/Stats" method="update_ammo"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/Pistol" to="Camera/WeaponManager/Weapons/Pistol/Graphics/MuzzleFlash" method="flash"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/Shotgun" to="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash" method="flash"]
[connection signal="health_changed" from="HealthManager" to="CanvasLayer/Stats" method="update_health"]
